--- a/management/management.html
+++ b/management/management.html
@@ -14,10 +14,12 @@ Timing Management
 </h1>
 
 <table align=center border="2" cellpadding="0" cellspacing="0" height=90% width=100%>
-	<tr height="2%"> <td  colspan=2> <iframe src="run_status.php" height=100% width=100% frameborder=0 spacing=0> </iframe>  </td></tr>
+	<tr height="1%"> <td  colspan=4> <iframe src="run_status.php" height=100% width=100% frameborder=0 spacing=0> </iframe>  </td></tr>
  <tr>
   <td>  <iframe src="running_order.php" height=100% width=100% frameborder=0 spacing=0     > </iframe>  </td>
-  <td>  <iframe src="entrants.php" height=100% width=100% frameborder=0 spacing=0     > </iframe>  </td>
+  <td>  <iframe src="green_times.php" height=100% width=100% frameborder=0 spacing=0     > </iframe>  </td>
+  <td>  <iframe src="start_times.php" height=100% width=100% frameborder=0 spacing=0     > </iframe>  </td>
+  <td>  <iframe src="finish_times.php" height=100% width=100% frameborder=0 spacing=0     > </iframe>  </td>
  </tr>
 </table>
 </body>
