--- a/management/management.html
+++ b/management/management.html
@@ -9,17 +9,13 @@
 <body>
 
 	<center>
-<h1>
-Timing Management
-</h1>
-
-<table align=center border="2" cellpadding="0" cellspacing="0" height=90% width=100%>
-	<tr height="1%"> <td  colspan=4> <iframe src="run_status.php" height=100% width=100% frameborder=0 spacing=0> </iframe>  </td></tr>
+<table align=center border="1" cellpadding="0" cellspacing="0" height=100% width=100%>
+	<tr height="50px"> <td  colspan=4> <iframe src="run_status.php" height=50px width=100% frameborder=0 spacing=0> </iframe>  </td></tr>
  <tr>
-  <td>  <iframe src="running_order.php" height=100% width=100% frameborder=0 spacing=0     > </iframe>  </td>
-  <td>  <iframe src="green_times.php" height=100% width=100% frameborder=0 spacing=0     > </iframe>  </td>
-  <td>  <iframe src="start_times.php" height=100% width=100% frameborder=0 spacing=0     > </iframe>  </td>
-  <td>  <iframe src="finish_times.php" height=100% width=100% frameborder=0 spacing=0     > </iframe>  </td>
+  <td width=35%>  <iframe src="running_order.php" height=100% width=100% frameborder=0 spacing=0     > </iframe>  </td>
+  <td width=20%> <iframe src="green_times.php" height=100% width=100% frameborder=0 spacing=0     > </iframe>  </td>
+  <td> <iframe src="start_times.php" height=100% width=100% frameborder=0 spacing=0     > </iframe>  </td>
+  <td> <iframe src="finish_times.php" height=100% width=100% frameborder=0 spacing=0     > </iframe>  </td>
  </tr>
 </table>
 </body>
