--- a/management/run_management.html
+++ b/management/run_management.html
@@ -10,8 +10,8 @@
 <table border="1" cellpadding="0" cellspacing="0" style="height:100%;width:100%; position: absolute; top: 0; bottom: 0; left: 0; right: 0;">
  <tr height="20px">
   <td colspan=4><table> <tr>
-   <td width=90% border="0"> <iframe src="run_status.php" height=40px width=100% frameborder=0 spacing=0> </iframe> </td>
-   <td align=right border="0"><a href="management.html">Main Management Page</a>&nbsp; &nbsp; </td>
+   <td width=88% border="0"> <iframe src="run_status.php" height=40px width=100% frameborder=0 spacing=0> </iframe> </td>
+   <td align=right border="0"><a href="management.html">Main Management Page</a></td>
   </tr></table></td>
  </tr>
  <tr>
