--- a/management/management.html
+++ b/management/management.html
@@ -12,7 +12,8 @@
 	<p> <a href="events.php"> Event Management </a> </p>
 	<p> <a href="run_management.html"> Run Management </a> </p>
 	<p> Results </p>
-	<p> <a href="results_et.php"> ET Ranked </a> &nbsp; &nbsp; &nbsp; 
+	<p> <a href="results_rt.php"> RT Ranked </a> &nbsp; &nbsp; &nbsp; 
+	    <a href="results_et.php"> ET Ranked </a> &nbsp; &nbsp; &nbsp; 
 	    <a href="results_ft.php"> FT Ranked </a> </p>
     </h2>
 </body>
