More hillclimb tie in
Added hillclimb style results to the management page

Updated  running_order.php  to sort loads by run_order first, then
by car_num

--- a/management/management.html
+++ b/management/management.html
@@ -11,9 +11,12 @@
     <h2>
 	<p> <a href="events.php"> Event Management </a> </p>
 	<p> <a href="run_management.html"> Run Management </a> </p>
-	<p> Results </p>
+    </h2>
+    <h1> Results </h1>
+    <h2>
 	<p> <a href="results_rt.php"> RT Ranked </a> &nbsp; &nbsp; &nbsp; 
 	    <a href="results_et.php"> ET Ranked </a> &nbsp; &nbsp; &nbsp; 
 	    <a href="results_ft.php"> FT Ranked </a> </p>
+	<p> <a href="hillclimb.php"> Hillclimb </a> </p>
     </h2>
 </body>
