Add a CSV download for the results
Meant to be use at the end of the day, download a .csv  with the
full results.

--- a/management/management.html
+++ b/management/management.html
@@ -17,6 +17,7 @@
 	<p> <a href="results_rt.php"> RT Ranked </a> &nbsp; &nbsp; &nbsp; 
 	    <a href="results_et.php"> ET Ranked </a> &nbsp; &nbsp; &nbsp; 
 	    <a href="results_ft.php"> FT Ranked </a> </p>
-	<p> <a href="hillclimb.php"> Hillclimb </a> </p>
+	<p> <a href="hillclimb.php"> Hillclimb </a> &nbsp; &nbsp; &nbsp;
+	    <a href="hillclimb_csv.php"> Hillclimb.csv </a> </p>
     </h2>
 </body>
