--- a/management/management.html
+++ b/management/management.html
@@ -10,7 +10,7 @@
     <h1> Timing Management </h1>
     <h2>
 	<p> <a href="events.php"> Event Management </a> </p>
-	<p> <a href="run_management.html"> Run Management </a> </p>
+	<p> <a href="run_management.html"> Run Management </a> &nbsp <a href="run_management_hillclimb.html"> Hillclimb </a> </p>
     </h2>
     <h1> Results </h1>
     <h2>
