Add class_info for decorating hillclimb results
Add a new table for class_info to record extra information
about a class.

There are 2 fileds,  record  &  info.

The main intent is for recording/reporting what the current record
is by class.  But info is really free form so can be used to
hold anything.

--- a/management/management.html
+++ b/management/management.html
@@ -10,6 +10,7 @@
     <h1> Timing Management </h1>
     <h2>
 	<p> <a href="events.php"> Event Management </a> </p>
+	<p> <a href="class_info.php"> Class Information </a> </p>
 	<p> <a href="run_management.html"> Run Management </a> &nbsp <a href="run_management_hillclimb.html"> Hillclimb </a> </p>
     </h2>
     <h1> Results </h1>
