Updates so that hillclimb results use new input mapping
    Green light  ->  Button input   # load new car
    Start beam   ->  Green input
    ?Split beam  ->  Start input
    Finish beam  ->  Finish input

Updates to the results reporting

Update  green_times.php, start_times.php, and finish_times.php
so that the different modes can be selected

Update  run_management_hillclimb  to call the above with the
required flags

--- a/html/HSV_Timing/management/run_management_hillclimb.html
+++ b/html/HSV_Timing/management/run_management_hillclimb.html
@@ -20,9 +20,9 @@
  </tr>
  <tr height="100%">
   <td width="33%">  <iframe src="running_order.php" height="100%" width="100%" frameborder="0" spacing="0"     > </iframe>  </td>
-  <td width="20%"> <iframe src="green_times.php" height="100%" width="100%" frameborder="0" spacing="0"     > </iframe>  </td>
-  <td> <iframe src="start_times.php" height="100%" width="100%" frameborder="0" spacing="0"     > </iframe>  </td>
-  <td> <iframe src="finish_times.php?hillclimb" height="100%" width="100%" frameborder="0" spacing="0"     > </iframe>  </td>
+  <td width="20%"> <iframe src="green_times.php?title=Start" height="100%" width="100%" frameborder="0" spacing="0"     > </iframe>  </td>
+  <td> <iframe src="start_times.php?title=Split 1&col_name=S/1" height="100%" width="100%" frameborder="0" spacing="0"     > </iframe>  </td>
+  <td> <iframe src="finish_times.php" height="100%" width="100%" frameborder="0" spacing="0"     > </iframe>  </td>
  </tr>
 </table>
 </body>
