Added config editing to management page
config.php  Fixed bug in determining to restart
management.html	Added link to config.php

Added a line to  hillclimb.php & hillclimb_csv.php to turn
command line arguments into $_GET[] so we pass in the
runners_only when generating the static pages with the
command line php operation.

--- a/html/HSV_Timing/management/management.html
+++ b/html/HSV_Timing/management/management.html
@@ -21,4 +21,12 @@
 	<p> <a href="hillclimb.php"> Hillclimb </a> &nbsp; &nbsp; &nbsp;
 	    <a href="hillclimb_csv.php"> Hillclimb.csv </a> </p>
     </h2>
+    <br>
+    <br>
+    <br>
+    <br>
+    <h1> System Management </h1>
+    <h2>
+	<p> <a href="config.php"> Configuration File Editing </a> </p>
+    </h2>
 </body>
