Added results for hillclimb style with a split
Updated the management menu
Added a return to management menu to  config.php

--- a/html/HSV_Timing/management/management.html
+++ b/html/HSV_Timing/management/management.html
@@ -21,7 +21,11 @@
 	<p> <a href="hillclimb.php"> Hillclimb </a> &nbsp; &nbsp; &nbsp;
 	    <a href="hillclimb_csv.php"> Hillclimb.csv </a> </p>
     </h2>
-    <br>
+    <h1> Reports </h1>
+    <h2>
+	<p> <a href="hillclimb-split.php"> Hillclimb Split</a> &nbsp; &nbsp; &nbsp;
+	    <a href="hillclimb-split_csv.php"> Hillclimb-split.csv </a> </p>
+    </h2>
     <br>
     <br>
     <br>
