--- a/html/HSV_Timing/management/management.html
+++ b/html/HSV_Timing/management/management.html
@@ -11,7 +11,8 @@
     <h2>
 	<p> <a href="events.php"> Event Management </a> </p>
 	<p> <a href="class_info.php"> Class Information </a> </p>
-	<p> <a href="run_management.html"> Run Management </a> &nbsp <a href="run_management_hillclimb.html"> Hillclimb </a> </p>
+	<p> Run Management </p>
+	<p> <a href="run_management.html"> Drag </a> &nbsp <a href="run_management_hillclimb.html"> Hillclimb </a> </p>
     </h2>
     <h1> Results </h1>
     <h2>
@@ -19,11 +20,11 @@
 	    <a href="results_et.php"> ET Ranked </a> &nbsp; &nbsp; &nbsp; 
 	    <a href="results_ft.php"> FT Ranked </a> </p>
 	<p> <a href="hillclimb.php"> Hillclimb </a> &nbsp; &nbsp; &nbsp;
-	    <a href="hillclimb_csv.php"> Hillclimb.csv </a> </p>
+	    <a href="hillclimb-split.php"> Hillclimb Split</a> &nbsp; &nbsp; &nbsp;
     </h2>
     <h1> Reports </h1>
     <h2>
-	<p> <a href="hillclimb-split.php"> Hillclimb Split</a> &nbsp; &nbsp; &nbsp;
+	<p> <a href="hillclimb_csv.php"> Hillclimb.csv </a> </p>
 	    <a href="hillclimb-split_csv.php"> Hillclimb-split.csv </a> </p>
     </h2>
     <br>
