--- a/html/HSV_Timing/management/management.html
+++ b/html/HSV_Timing/management/management.html
@@ -12,20 +12,20 @@
 	<p> <a href="events.php"> Event Management </a> </p>
 	<p> <a href="class_info.php"> Class Information </a> </p>
 	<p> Run Management
-	<br> <a href="run_management.html"> Drag </a> &nbsp <a href="run_management_hillclimb.html"> Hillclimb </a> </p>
+	<br> <a href="run_management.html">Drag</a> &nbsp; &nbsp; <a href="run_management_hillclimb.html">Hillclimb</a> </p>
     </h2>
     <h1> Results </h1>
     <h2>
-	<p> <a href="results_rt.php"> RT Ranked </a> &nbsp; &nbsp; &nbsp; 
-	    <a href="results_et.php"> ET Ranked </a> &nbsp; &nbsp; &nbsp; 
-	    <a href="results_ft.php"> FT Ranked </a> </p>
-	<p> <a href="hillclimb.php"> Hillclimb </a> &nbsp; &nbsp; &nbsp;
-	    <a href="hillclimb-split.php"> Hillclimb Split</a> </p>
+	<p> <a href="results_rt.php">RT Ranked</a> &nbsp; &nbsp; &nbsp; 
+	    <a href="results_et.php">ET Ranked</a> &nbsp; &nbsp; &nbsp; 
+	    <a href="results_ft.php">FT Ranked</a> </p>
+	<p> <a href="hillclimb.php">Hillclimb</a> &nbsp; &nbsp; &nbsp;
+	    <a href="hillclimb-split.php">Hillclimb Split</a> </p>
     </h2>
     <h1> Reports </h1>
     <h2>
-	<p> <a href="hillclimb_csv.php"> Hillclimb.csv </a> &nbsp; &nbsp; &nbsp;
-	    <a href="hillclimb-split_csv.php"> Hillclimb-split.csv </a> </p>
+	<p> <a href="hillclimb_csv.php">Hillclimb.csv</a> &nbsp; &nbsp; &nbsp;
+	    <a href="hillclimb_csv.php?split"> Hillclimb-split.csv </a> </p>
     </h2>
     <br>
     <br>
