Some config.php clean up and add TriSeries to the index pages
Add a message about Default Report changes success/failure.

Make report name a target for selecting the default instead of enabling it.

--- a/html/index.html
+++ b/html/index.html
@@ -18,7 +18,8 @@
 	    <a href="HSV_Timing/Results/results_ft.html">FT Ranked</a> </p>
 	<p> Hillclimb Style </p>
 	<p> <a href="HSV_Timing/Results/hillclimb.html">Hillclimb</a> &nbsp; &nbsp; &nbsp;
-	    <a href="HSV_Timing/Results/hillclimb-split.html">Hillclimb with Split</a> </p>
+	    <a href="HSV_Timing/Results/hillclimb-split.html">Hillclimb with Split</a> &nbsp; &nbsp; &nbsp;
+	    <a href="HSV_Timing/Results/triseries.html">Tri Series</a> </p>
     </h2>
     <br> <br>
     <h2> <a href="HSV_Timing/management/management.html"> Timing Management </a><div style="font-weight: normal; font-size: small;">(password required)</div></h2>
