--- a/html/HSV_Timing/management/management.html
+++ b/html/HSV_Timing/management/management.html
@@ -24,7 +24,8 @@
 	    <a href="results_et.php">ET Ranked</a> &nbsp; &nbsp; &nbsp; 
 	    <a href="results_ft.php">FT Ranked</a> </p>
 	<p> <a href="hillclimb.php">Hillclimb</a> &nbsp; &nbsp; &nbsp;
-	    <a href="hillclimb-split.php">Hillclimb Split</a> </p>
+	    <a href="hillclimb-split.php">Hillclimb Split</a> &nbsp; &nbsp; &nbsp;
+	    <a href="triseries.php">Tri Series</a> </p>
     </h2>
     <hr>
     <h1> Reports </h1>
