Added a CSV report for the TriSeries event

--- a/html/HSV_Timing/management/management.html
+++ b/html/HSV_Timing/management/management.html
@@ -31,7 +31,8 @@
     <h1> Reports </h1>
     <h2>
 	<p> <a href="hillclimb_csv.php">Hillclimb.csv</a> &nbsp; &nbsp; &nbsp;
-	    <a href="hillclimb_csv.php?split"> Hillclimb-split.csv </a> </p>
+	    <a href="hillclimb_csv.php?split"> Hillclimb-split.csv </a> &nbsp; &nbsp; &nbsp;
+	    <a href="triseries_csv.php?split"> Triseries-split.csv </a> </p>
     </h2>
     <hr>
     <h1> System Management </h1>
