--- a/html/HSV_Timing/management/run_management_hillclimb_test.html
+++ b/html/HSV_Timing/management/run_management_hillclimb_test.html
@@ -22,7 +22,8 @@
   </td>
  </tr>
  <tr height="100%">
-  <td width="33%"><iframe style="resize: horizontal;" src="running_order.php" height="100%" width="100%" frameborder="0" spacing="0"     > </iframe> </td>
+  <td width="33%"><div height="100%" width="100%" style="height:100%;width:100%;"> <iframe style="resize: vertical" src="fake_buttons.html" height="45px" width="100%"></iframe>
+                  <iframe style="resize: horizontal;" src="running_order.php" height="92%" width="100%" frameborder="0" spacing="0"     > </iframe> </div> </td>
   <td width="20%"><iframe style="resize: horizontal;" src="green_times.php?title=Start" height="100%" width="100%" frameborder="0" spacing="0"     > </iframe> </td>
   <td><iframe style="resize: horizontal;" src="start_times.php?title=Split 1&col_name=S/1" height="100%" width="100%" frameborder="0" spacing="0"     > </iframe> </td>
   <td><iframe style="resize: horizontal;" src="finish_times.php" height="100%" width="100%" frameborder="0" spacing="0"     > </iframe> </td>
