Add the new testing page to the management.html
Put an entry in changelog

--- a/html/HSV_Timing/management/management.html
+++ b/html/HSV_Timing/management/management.html
@@ -15,7 +15,8 @@
 	<p> <a href="events.php"> Event Management </a> &nbsp; &nbsp; &nbsp;
 	    <a href="class_info.php"> Class Information </a> </p>
 	<p> Run Management
-	<br> <a href="run_management.html">Drag</a> &nbsp; &nbsp; <a href="run_management_hillclimb.html">Hillclimb</a> </p>
+	<br> <a href="run_management.html">Drag</a> &nbsp; &nbsp; <a href="run_management_hillclimb.html">Hillclimb</a>
+	      &nbsp; &nbsp; <a href="run_management_hillclimb_test.html">Hillclimb Testing</a> </p>
     </h2>
     <hr>
     <h1> Results </h1>
