Add second split time
Create_Database.sql			New table definition
config.php				New config to allow the gpio for split2 to be set.
timingd					Watch the split2 gpio, and write to the table
split_times.php				Form for managing split2 times
run_management_hillclimb_2.html		New management page including split2 times

fake_buttons				Extra fake button for split2
fake_buttons_2.html			Extra fake button for split2
run_management_hillclimb_2_test.html	New management page including split2 times

management.html				Include new management pages

hillclimb-split2.php			New results page with split2 times

--- a/html/HSV_Timing/management/management.html
+++ b/html/HSV_Timing/management/management.html
@@ -16,7 +16,9 @@
 	    <a href="class_info.php"> Class Information </a> </p>
 	<p> Run Management
 	<br> <a href="run_management.html">Drag</a> &nbsp; &nbsp; <a href="run_management_hillclimb.html">Hillclimb</a>
-	      &nbsp; &nbsp; <a href="run_management_hillclimb_test.html">Hillclimb Testing</a> </p>
+	      &nbsp; &nbsp; <a href="run_management_hillclimb_test.html">Hillclimb Testing</a>
+	<br> With 2nd Split &nbsp; &nbsp; <a href="run_management_hillclimb_2.html">Hillclimb</a>
+	      &nbsp; &nbsp; <a href="run_management_hillclimb_2_test.html">Hillclimb Testing</a> </p>
     </h2>
     <hr>
     <h1> Results </h1>
@@ -26,7 +28,8 @@
 	    <a href="results_ft.php">FT Ranked</a> </p>
 	<p> <a href="hillclimb.php">Hillclimb</a> &nbsp; &nbsp; &nbsp;
 	    <a href="hillclimb-split.php">Hillclimb Split</a> &nbsp; &nbsp; &nbsp;
-	    <a href="triseries.php">Tri Series</a> </p>
+	    <a href="hillclimb-split-2.php">Hillclimb 2 Splits</a> </p>
+	<br><a href="triseries.php">Tri Series</a> </p>
     </h2>
     <hr>
     <h1> Reports </h1>
