Add the 2-split version of the tri-series results to the management web page.  Don't really need the 2 split (or 1 split) versions, as the 2 split code versions will display correctly if split 2 data is not present, or no split data is present.
May look a removing the non-two-split versions in the future,
but leave them there for now, incase I missed something.

--- a/html/HSV_Timing/management/management.html
+++ b/html/HSV_Timing/management/management.html
@@ -29,7 +29,8 @@
 	<p> <a href="hillclimb.php">Hillclimb</a> &nbsp; &nbsp; &nbsp;
 	    <a href="hillclimb-split.php">Hillclimb Split</a> &nbsp; &nbsp; &nbsp;
 	    <a href="hillclimb-split-2.php">Hillclimb 2 Splits</a> </p>
-	<br><a href="triseries.php">Tri Series</a> </p>
+	    <a href="triseries.php">Tri Series</a> &nbsp; &nbsp; &nbsp;
+	    <a href="triseries-2.php">Tri Series 2 Splits</a> </p>
     </h2>
     <hr>
     <h1> Reports </h1>
